<resources>
    <string name="app_name">KotlinTeach</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="TrueButton">Да</string>
    <string name="FalseButton">Нет</string>
    <string name="NextButton">Следующий вопрос</string>
    <string name="PreviousButton">Предыдущий вопрос</string>
    <string name="AnswerTrue">Ответ верный</string>
    <string name="AnswerFalse">Ответ не верный</string>
    <string name="QuestionsComplete">Опрос закончен!\nВаш результат : </string>

    <string name="australia_question">Сингапур столица Австралии?</string>
    <string name="england_question">Лондон столица Англии?</string>
    <string name="russia_question">Питер столица России?</string>
    <string name="usa_question">Вашингтон столица США?</string>

    <string name="warning_text">Вы уверенны что хотите сделать это?</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="cheat_button">Подсказка!</string>
    <string name="judgment_toast">Подсматривать - это плохо.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>